# spleeter-pytorch

./: .gitignore  LICENSE  README.md  convert-to-coreml  pyproject.toml  requirements.txt  test_estimator.py  to_mlmodel.py  todo.md
spleeter/: estimator.py  separator.py  unet.py  util.py
spleeter_pytorch/: __init__.py  __main__.py  audio.py  estimator.py  separator.py  stft.py  unet.py  util.py
