[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spleeter-pytorch"
version = "0.0.1"
description = "Spleeter implementation in PyTorch"
dependencies = [
  "coremltools >= 6.3, < 7",
  "numpy >= 1.24, < 2",
  "librosa >= 0.10, < 1",
  "soundfile >= 0.12, < 1",
  "tensorflow >= 2.13.0rc0",
  "torch >= 2.0, < 3"
]

[tool.setuptools.packages]
find = {}

[project.scripts]
spleeter-pytorch = "spleeter_pytorch:main"
