[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spleeter-pytorch"
version = "0.0.1"
description = "Spleeter implementation in PyTorch"
# Otherwise coremltools won't install a wheel containing required native libraries
# and fail during model conversions e.g. noting that BlobWriter is not available.
requires-python = "<3.11"
dependencies = [
  "coremltools >= 6.3, < 7",
  "numpy >= 1.24, < 2",
  "tensorflow >= 2.13.0rc0",
  "torch >= 2.0, < 3",
  "torchaudio >= 2.0, < 3",
]

[tool.setuptools.packages]
find = {}

[project.scripts]
spleeter-pytorch = "spleeter_pytorch:main"
